# for-open-source

./: .gitignore  Makefile  README.md  Radiobook  Stargazer  data.json  explore.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: applicatio.yml  application.yml
.github/workflows/: aggregate.yml  approve-application.yml  build-processor.yml  review-application.yml  test-processor.yml  validate-application.yml
TNTools-main/: Program.cs  README.md  SQLServerClient.cs  TNTools.csproj  TNTools.sln  frmMain.Designer.cs  frmMain.cs  frmMain.resx
data/: 100-snap-and-the-beauty-and-joy-of-computing.json  1000-webhookdll.json  1001-deployinator.json  1002-lfnetworking.json  1003-flowboat-entrepreneurship-club.json  1004-webui_bfm.json  1006-g-up.json  1007-python-nordeste.json  1008-node101.json  1009-denbot.json  101-gdg-northern-colorado-open-source-examples.json  1010-aep.dev.json  1012-pydantic.json  1013-the-labscript-suite.json  1014-ofico.json  1015-lakota-robotics.json  1016-etcd.json  1017-psake.json  1018-autocut.json  1019-usul-ai.json  102-riiconnect24.json  1020-owasp-israel.json  1021-terraform-provider-onepasswordorg.json  1024-pynorte.json  1025-custom-esxi-iso-images.json  1026-frontpage.json  1027-hack4impact-mcgill.json  1028-xtplayer.json  1029-the-environmental-defense-initiative.json  103-zydis.json  1030-scalamatsuri.json  1031-app-inventor.json  1032-djangonaut-space.json  1033-exif-watermark-generator.json  1034-containerd.json  1035-arviz.json  1036-ceph.json  1037-katta.json  1038-xoj.json  1039-overture-maps-foundation.json  (+1060 more)
licensecc-develop/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
licensecc-develop/cmake/: FindSphinx.cmake  Findlccgen.cmake  target_arch.cmake  toolchain-ubuntu-mingw64.cmake  utilities.cmake
licensecc-develop/doc/: DoxygenLayout.xml  conf.py  index.rst  open-license-manager.vsdx  snippets.txt  structure.dox
licensecc-develop/doc/_static/css/: custom.css
licensecc-develop/doc/_templates/: breadcrumbs.html
licensecc-develop/doc/analysis/: Backoffice.txt  Development-And-Usage-Workflow.md  features.rst
licensecc-develop/doc/api/: extend.rst  hardware_identifiers.rst  public_api.rst
licensecc-develop/doc/development/: Build-the-library-windows.rst  Build-the-library.md  CMakeSettings.json  Dependencies.md  Development-Environment-Setup.md
licensecc-develop/doc/other/: CREDITS.md  QA.md  glossary.rst
licensecc-develop/doc/snippets/: hardware.cpp
licensecc-develop/doc/usage/: Hardware-identifiers.rst  License-retrieval.md  concepts.rst  integration.rst  issue-licenses.md
licensecc-develop/include/licensecc/: datatypes.h  licensecc.h
licensecc-develop/scripts/: windows_download_boost.bat
licensecc-develop/src/: CMakeLists.txt
licensecc-develop/src/cmake/: licensecc-config.cmake
licensecc-develop/src/inspector/: CMakeLists.txt  inspector.cpp
licensecc-develop/src/templates/: licensecc_properties.h.in  licensecc_properties_test.h.in  public_key.inja
licensecc-develop/test/: CMakeLists.txt  IdentificationStrategy_test.cpp  default_strategy_test.cpp
licensecc-develop/test/functional/: CMakeLists.txt  crack_test.cpp  date_test.cpp  generate-license.cpp  generate-license.h  hw_identifier_it_test.cpp  signature_verifier_test.cpp  standard-license_test.cpp
script/: aggregator.go  application.go  application_test.go  approver.go  github.go  go.mod  go.sum  main.go  mock-issue.json  reviewer.go  testing.go  validator.go  validator_test.go
script/mock-issue-bodies/: character-test.md  event.md  invalid-1.md  no-responses.md  project.md  team.md
script/test-issues/: example.json  invalid-empty-body.json  invalid-examples-1.json  invalid-no-responses.json  valid-event.json  valid-project-approved-closed.json  valid-project-approved.json  valid-project-character-test.json  valid-project-closed.json  valid-project-reviewing.json  valid-project.json  valid-team.json
